Estilização do componente MovieCard completa

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,8 @@
     font-family: "Jost", serif;;
 }
 body {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
     background: linear-gradient(to right top, #283a46, #283a46, #283a46, #283a46, #283a46, #2e404c, #334651, #394c57, #475a65, #556872, #637781, #72868f);
 }
